# HasChor

./: HasChor.cabal
examples/ring-leader/: Main.hs  Ring.hs
examples/simplest/: A.hs  Main.hs
src/: Choreography.hs
src/Choreography/: Choreo.hs  Location.hs  Network.hs
src/Choreography/Network/: Http.hs
src/Control/Monad/: Freer.hs
