cabal-version:      2.4
name:               HasChor
version:            0.1.0.0
synopsis:           Choreographic programming in Haskell
license:            BSD-3-Clause
license-file:       LICENSE
author:             Gan Shen
maintainer:         Gan Shen <gan_shen@icloud.com>
copyright:          (c) Gan Shen 2022
category:           Concurrency
tested-with:
   GHC == 9.2.8

library
    hs-source-dirs:   src
    default-language: GHC2021
    exposed-modules:
        Choreography
        Choreography.Choreo,
        Choreography.Location,
        Choreography.Network,
        Choreography.Network.Http
        Control.Monad.Freer
    build-depends:
        base ,
        bytestring ,
        http-client ,
        servant ,
        servant-client ,
        servant-server ,
        unordered-containers ,
        warp,
        selective,
        template-haskell

executable simplest
    hs-source-dirs:   examples/simplest
    main-is:          Main.hs
    default-language: GHC2021
    exposed-modules: A
    build-depends:
        HasChor,
        base, selective, transformers

executable bank-2pc
    hs-source-dirs:   examples/bank-2pc
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        split

executable bookseller-0-network
    hs-source-dirs:   examples/bookseller-0-network
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time

executable bookseller-2-higher-order
    hs-source-dirs:   examples/bookseller-2-higher-order
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time

executable bookseller-3-loc-poly
    hs-source-dirs:   examples/bookseller-3-loc-poly
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time

executable diffiehellman
    hs-source-dirs:   examples/diffiehellman
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        random

executable karatsuba
    hs-source-dirs:   examples/karatsuba
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        async,
        base,
        containers

executable kvs1
    hs-source-dirs:   examples/kvs-1-simple
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        containers

executable kvs2
    hs-source-dirs:   examples/kvs-2-primary-backup
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        containers

executable kvs3
    hs-source-dirs:   examples/kvs-3-higher-order
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        containers

executable kvs4
    hs-source-dirs:   examples/kvs-4-loc-poly
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        containers

executable mergesort
    hs-source-dirs:   examples/mergesort
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        containers

executable quicksort
    hs-source-dirs:   examples/quicksort
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        time ,
        containers ,
        async

executable ring-leader
    hs-source-dirs:   examples/ring-leader
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base ,
        transformers ,
        selective,

executable playground
    hs-source-dirs:   examples/playground
    main-is:          Main.hs
    default-language: GHC2021
    build-depends:
        HasChor,
        base
